# pathreg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
pathreg/: __init__.py  filters.py
tests/: conftest.py  test_add_path.py  test_clean_path.py  test_diff_paths.py  test_duplicate_paths.py  test_entry.py  test_filters.py  test_find_all_executables.py  test_find_executable.py  test_in_path.py  test_index_and_move.py  test_list_paths.py  test_main.py  test_path_context.py  test_path_len.py  test_prepend_path.py  test_profile.py  test_remove_path.py  test_rename_path.py  test_round_trip.py  test_save_load_path_file.py  test_set_path.py  test_shell.py  test_snapshot_restore.py  test_swap_paths.py  test_windows.py
